kustomize/bases/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping
spec:
  selector:
    matchLabels:
      app: shopping
  replicas: 2
  template:
    metadata:
      labels:
        app: shopping
    spec:
      serviceAccountName: shopping
      containers:
        - name: shopping
          image: shopping:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              memory: "0.05Gi"
              cpu: "0.008"
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 60
            httpGet:
              port: 80
              path: /
        - name: cloud-sql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.37.4-alpine
          command:
            - /cloud_sql_proxy
            - -ip_address_types=PRIVATE
            - -log_debug_stdout
            - -enable_iam_login
            - -instances=harm-personal-projects:europe-west2:prod-mysql=tcp:3306
          securityContext:
            runAsUser: 2
            allowPrivilegeEscalation: false
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
