kustomize/bases/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping
spec:
  selector:
    app: shopping
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
