kustomize/bases/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopping
spec:
  ingressClassName: public
  rules:
  - host: shopping.smiths.org.uk
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: shopping
              port:
                name: http
